Correcao do bug 559, 593, 661 (variacoes da mesma coisa) - BridgeLookup não trabalhava bem com o disabled/visible/enableCardIdLink

--- a/webapps/default/ext-xeo/css/ext-xeo.css
+++ b/webapps/default/ext-xeo/css/ext-xeo.css
@@ -108,6 +108,12 @@ ul.x-tab-strip {
 	overflow-y: scroll;
 }
 
+.xwc-bridge-Link {
+	color: blue;
+	cursor: pointer;
+	text-decoration: underline;
+}
+
 a.xwc-search-trigger {
 	width: 16px;
 	height: 16px;
